# InsightX

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  LICENSE  README.md  README_zh-TW.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_ytdlp_fallback.py  tsconfig.json  validate_jsx.cjs  vite.config.ts
dev/: README.md  test_backend.py  test_full_pipeline.py  test_serper_scraper.py
docs/: v3-ui-migration-plan.md  v4-api-contract.md  v4-smoke-test.md  v4-sse-events.md  v4-view-model.md
docs/archive/: shopee_evaluation_2026-04-21.md
outputs/: test_reducer.mjs
ppt/: InsightX_v4.0.0.pptx  generate.py
src/: main.py
src/api/: routes.py
src/config/: mock_responses.py  prompts.py
src/services/: canonicalizer.py  llm_service.py  scraper_service.py  youtube_scraper.py
src/static/: App.tsx  index.css  index.html  insightx_game.html  main.tsx
src/static/v2/: bootstrap.js  index.html  index.html.bak-20260421-color  index.html.bak-20260421-stripe-phaseA-layered  index.html.bak-20260422-pre-newdesign
src/static/v2/core/: adapters.js  api.js  async.js  ids.js
src/static/v2/hooks/: useAnalyzeStream.js  useAppReducer.js  useLocalStorage.js
tests/: test_full_pipeline.py  test_scraper.py
